--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </header>
     <section id="hero">
+        <img src="./images/img1.jpg");" alt="">
         <h1>Aprende a programar</h1>
         <button>Contacta</button>
     </section>
