--- a/programas.html
+++ b/programas.html
@@ -12,7 +12,7 @@
         <div class="container">
             <p class="logo">EzWeb!</p>
             <nav>
-                <a href="web.html#hero">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="somosez.html">Quienes somos?</a>
                 <a href ="programas.html">Programas</a> 
                 <a href="contactos.html">Contactos</a>
