--- a/contactos.html
+++ b/contactos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilscontact.css">
     <title>EzWeb!</title>
 </head>
 <body>
@@ -20,57 +20,17 @@
             </nav>
         </div>
     </header>
-    <section id="contact">
-        <div class="content">
-            <h2>Contactanos</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas rem dolorum aut, sequi magni corporis alias esse dolorem, repellat iste repellendus. Error commodi nesciunt suscipit laudantium possimus, cumque illum rem.
-            </p>
-        </div>
-            <div class="contactInfo">
-                <div class="box">
-                    <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>Direccion</h3>
-                        <p>4671 Sugar Camp Road,<br>Otawatona,Minnesota,<br>55060</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>Telefono</h3>
-                        <p>+687542158</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-                    <div class="text">
-                        <h3>Email</h3>
-                        <p>gdja7djam0@mail.com</p>
-                    </div>
-                </div>
-            </div>
-            <div class="contactForm">
-                <form>
-                    <h2>Enviar Mensaje</h2>
-                    <div class="inputBox">
-                        <input type="text" name="" required="required">
-                        <span>Nombre completo</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="text" name="" required="required">
-                        <span>Email</span>
-                    </div>
-                    <div class="inputBox">
-                        <textarea required="required"></textarea>
-                        <span>Escribe tu mensaje</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" name="" value="Send"
-                        <span>Escribe tu mensaje</span>
-                    </div>
-                </form>
-            </div>
-    </section>
+    <section class="form-register">
+        <h4>Contacta Ez!</h4>
+        <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+        <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
+        <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
+        <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su Contraseña">
+        <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
+        <input class="botons" type="submit" value="Registrar">
+        <p><a href="#">¿Ya tengo Cuenta?</a></p>
+      </section>
+    
     
 </body>
 </html>
