--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles.css">
     <title>EzWeb!</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <nav>
                 <a href="#hero">Inicio</a>
                 <a href="somosez.html">Quienes somos?</a>
-                <a href = "programas.html">Programas</a> 
+                <a href ="programas.html">Programas</a> 
                 <a href="contactos.html">Contactos</a>
             </nav>
         </div>
