--- a/somosez.html
+++ b/somosez.html
@@ -15,6 +15,7 @@
                 <a href="index.html">Inicio</a>
                 <a href="somosez.html">Quienes somos?</a>
                 <a href ="programas.html">Programas</a> 
+                <a href="tauler.html">Horaris</a>
                 <a href="contactos.html">Contactos</a>
             </nav>
         </div>
