--- a/programas.html
+++ b/programas.html
@@ -27,17 +27,17 @@
             <div class="programas">
         <div class="carta">
             <h3>Programador Front-end</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi tempore sit nostrum porro, dolorum quod adipisci! Molestias sunt necessitatibus sit iste illum fugit recusandae, modi facilis animi, cum temporibus voluptate.</p>
+            <p>En EzWeb! podrás encontrar cursos gratis online donde podrás aprender los conceptos básicos en desarrollo web front-end y aprender programación con los mejores profesores en el área, sin necesidad de tener conocimientos previos.</p>
             <button>+ Info</button>
         </div>
         <div class="carta">
             <h3>Programador Full-Stack</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae perspiciatis odit soluta nobis, fuga accusamus omnis. Suscipit vitae error, officiis impedit aliquid adipisci aliquam saepe maiores ipsa quidem animi hic!</p>
+            <p>En este curso PHP podrás aprender el lenguaje más ampliamente usado en la programación de sitios Web backend de aplicaciones Web, y crear todo tipo de aplicaciones con amplia funcionalidad. Aprende también como subir tus aplicaciones Web a Internet, y las prácticas y metodologías más recomendables.</p>
             <button>+ Info</button>
         </div>
         <div class="carta">
             <h3>Programador Phyton</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, dolorum autem. Quo, laborum? Amet distinctio minus, error ducimus, repellat expedita maxime nisi consectetur iste nobis porro illo minima. Illum, assumenda.</p>
+            <p>Este curso te dará ágil acceso a los conceptos básicos de programación utilizando el lenguaje de programación Python en su versión 3.0. Python tiene un sintaxis sencilla y compacta, lo que permite aplicar rápidamente los conceptos aprendidos para mejorar la eficiencia en tus tareas cotidianas.</p>
             <button>+ Info</button>
         </div>
         </div>
