--- a/somosez.html
+++ b/somosez.html
@@ -26,7 +26,7 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h2>Somos <span class="color-acento"> ez! </span></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit consequatur doloremque, maiores, eligendi tempora tenetur velit saepe nisi fuga beatae minima cum, aspernatur eum adipisci itaque impedit sequi sapiente libero?</p>
+                <p>Somos expertos desarroladores y programadores en lenguajes como Java, JavaScript, Phyton y otros. Tenemos un nuevo centro en Lleida llamado "Ins Caparrella". Ademas damos un servicio online para vosotros. Si estas interesado o quieres saber más contactanos en la pagina de "Contactos"<div class=""></div></p>
             </div>
         </div>
     </section>
