--- a/tauler.html
+++ b/tauler.html
@@ -80,5 +80,11 @@
         </tr>
 
     </table>
+    
+    <footer>
+        <div class="container">
+            <p>&copy; EzWeb!2023</p>
+        </div>
+    </footer>
 </body>
 </html>
