--- a/tauler.html
+++ b/tauler.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilstauler.css">
-    <title>Tauler</title>
+    <title>EzWeb!</title>
 </head>
 <body>
     <hr>
@@ -78,6 +78,5 @@
             <td>Ins Caparrella</td>
 
         </tr>
-    
 </body>
 </html>
